# fice-dev-application

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  tmdb.py
src/db/: models.py
src/routers/: __init__.py  error.py  favourites.py  movie.py  start.py
